--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.618" />
 
     <Button
-        android:id="@+id/logoutButton"
+        android:id="@+id/Search"
         android:layout_width="243dp"
         android:layout_height="65dp"
         android:text="Поиск"
