--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,14 +16,29 @@
         android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.008" />
+
+    <TextView
+        android:id="@+id/greetingSearch"
+        android:layout_width="340dp"
+        android:layout_height="63dp"
+        android:text="Чтобы написать пользователю сообщение кликните на его имени или фамилии"
+        android:textColor="@color/black"
+        android:textSize="17dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.065" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ListUsers"
-        android:layout_width="350dp"
-        android:layout_height="540dp"
+        android:layout_width="349dp"
+        android:layout_height="482dp"
 
 
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
