--- a/app/src/main/res/layout-land/activity_chat_list.xml
+++ b/app/src/main/res/layout-land/activity_chat_list.xml
@@ -5,22 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChatListActivity"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ChatList"
-        android:layout_width="376dp"
-        android:layout_height="586dp"
+        android:layout_width="597dp"
+        android:layout_height="267dp"
 
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.889" />
+        app:layout_constraintVertical_bias="0.472" />
 
     <TextView
         android:id="@+id/textView"
@@ -31,5 +30,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.084" />
+        app:layout_constraintVertical_bias="0.044" />
 </androidx.constraintlayout.widget.ConstraintLayout>
