--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".SearchActivity"
     android:padding="16dp"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
 
     <TextView
@@ -17,37 +17,39 @@
         android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.266"
+        app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/greetingSearch"
-        android:layout_width="340dp"
-        android:layout_height="63dp"
+        android:layout_width="349dp"
+        android:layout_height="61dp"
         android:text="Чтобы написать пользователю сообщение кликните на его имени или фамилии"
         android:textColor="@color/black"
         android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.065" />
+        app:layout_constraintVertical_bias="0.111" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ListUsers"
-        android:layout_width="349dp"
-        android:layout_height="482dp"
+        android:layout_width="682dp"
+        android:layout_height="245dp"
 
 
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.692"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.886">
 
     </androidx.recyclerview.widget.RecyclerView>
 
